# versualizer

./: .beans.yml  AGENTS.md  Cargo.toml  DEVELOPMENT.md  README.md  REMAINING_PLAN.md  justfile
.claude/: settings.local.json
.github/workflows/: lint.yaml  rust-lint.yaml  rust-test.yaml
versualizer-app-dioxus/: Cargo.toml  Dioxus.toml  build.rs
versualizer-app-dioxus/assets/: default_theme.css  style.css
versualizer-app-dioxus/src/: app.rs  bridge.rs  main.rs  state.rs  theme_watcher.rs  window_resize.rs  window_state.rs
versualizer-app-dioxus/src/components/: karaoke_line.rs  mod.rs
versualizer-app-freya/: Cargo.toml
versualizer-app-freya/src/: app.rs  main.rs  state.rs
versualizer-core/: Cargo.toml
versualizer-core/src/: cache.rs  config.rs  error.rs  fetcher.rs  lib.rs  lrc.rs  paths.rs  playback.rs  provider.rs  source.rs  sync.rs  time.rs
versualizer-core/src/providers/: lrclib.rs  mod.rs  spotify_lyrics.rs
versualizer-lyrics-lrclib/: Cargo.toml
versualizer-lyrics-lrclib/src/: lib.rs
versualizer-lyrics-spotify/: Cargo.toml
versualizer-lyrics-spotify/src/: auth.rs  lib.rs  token_manager.rs  totp.rs
versualizer-spotify/: Cargo.toml
versualizer-spotify-api/: Cargo.toml
versualizer-spotify-api/src/: config.rs  error.rs  lib.rs  oauth.rs  paths.rs  poller.rs
versualizer-spotify/src/: error.rs  lib.rs  lyrics.rs  oauth.rs  paths.rs  poller.rs
