[workspace]
resolver = "2"
members = ["versualizer-core", "versualizer-spotify", "versualizer-app-freya"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Kevin Xiao"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# SQLite
tokio-rusqlite = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }

# Spotify
rspotify = { version = "0.13", features = ["client-reqwest"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
directories = "6"
dirs = "6"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
url = "2"
open = "5"

# GUI
freya = { git = "https://github.com/marc2332/freya" }
freya-radio = { git = "https://github.com/marc2332/freya" }

# Async channels for UI
futures-channel = "0.3"
futures-lite = "2"

# Web server (for OAuth callback)
axum = "0.8"

# Global hotkeys
global-hotkey = "0.6"

# Shutdown handling
tokio-util = { version = "0.7", features = ["rt"] }
