[package]
name = "versualizer-app-dioxus"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "versualizer-dioxus"
path = "src/main.rs"

[dependencies]
versualizer-core = { path = "../versualizer-core" }
versualizer-spotify = { path = "../versualizer-spotify" }

# Dioxus desktop
dioxus = { version = "0.7", features = ["desktop"] }

# Dioxus animations
dioxus-motion = { version = "0.3", default-features = false, features = ["desktop"] }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Shutdown handling
tokio-util = { workspace = true }
ctrlc = { workspace = true }

[lints]
workspace = true
