[package]
name = "versualizer-spotify"
version.workspace = true
edition.workspace = true

[dependencies]
versualizer-core = { path = "../versualizer-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rspotify = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
open = { workspace = true }
axum = { workspace = true }
