[package]
name = "versualizer-spotify"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
versualizer-core = { path = "../versualizer-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
rspotify = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
open = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
